--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "async": "2.1.2",
     "bitfinex-api-node": "^1.2.1",
     "co-fs": "^1.2.0",
-    "commander": "^2.20.3",
+    "commander": "^2.13.0",
     "gekko": "0.0.9",
-    "humanize-duration": "^3.25.1",
-    "koa": "^1.7.0",
+    "humanize-duration": "^3.10.0",
+    "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-cors": "0.0.16",
     "koa-logger": "^1.3.0",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
-    "lodash": "^4.17.20",
-    "moment": "^2.29.1",
+    "lodash": "2.x",
+    "moment": "^2.20.1",
     "opn": "^4.0.2",
     "promisify-node": "^0.5.0",
     "prompt-lite": "0.1.1",
@@ -36,17 +36,17 @@
     "retry": "^0.10.1",
     "semver": "5.4.1",
     "sqlite3": "^4.0.4",
-    "stats-lite": "^2.2.0",
+    "stats-lite": "^2.0.4",
     "tiny-promisify": "^0.1.1",
-    "toml": "^2.3.6",
-    "ws": "^6.2.1"
+    "toml": "^2.3.0",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
-    "chai": "^4.3.0",
-    "mocha": "^8.3.0",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
     "proxyquire": "^1.7.10",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "sinon": "^4.2.0"
   },
   "engines": {
